# youtubeSummarizer

./: .env.example  LICENSE  MANIFEST.in  README.md  litellm_model_list.yaml  pyproject.toml  setup.py
youtube_summarizer/: cli.py  config.py  llm.py  prompts.py  transcript.py
